# notes

./: .gitignore  README.md
audio/: Extracting Audio from Video using Python.ipynb  音频文件分析.ipynb
misc/: Apache.txt  asw_lightsail.txt  celery.txt  centos7常用命令.txt  conda.txt  consul.txt  django.txt  docker.txt  https.txt  k8s.txt  linux_command.txt  nodejs.txt  pip.txt  poetry  poetry.txt  powershell.txt  pyenv.txt  redis.txt  regex.txt  rocketchat.txt  scrapy.txt  sed.txt  shell.txt  start-chrome.cmd  vagrant.txt  virtualenv.txt  vmware的原始镜像无法连接ssh.txt  windows安装python2.txt
misc/asyncio_learning/: 1_coroutines.py  2_awaitables.py
misc/concurrency-overview/: race_condition.py
misc/dask/: 10 Minutes to Dask.ipynb
misc/git资料/: centos7下git服务器端搭建.txt  git常用命令.txt  pluralsight_git
misc/install_brew/: HomeBrew 官方安装太慢而失败这么搞就行.txt  brew_install
misc/mongodb/: 10_working_with_indexes.py  12_understanding_the_aggregation_framework.py  db_conn.py  mongo_repl.py  mongodb.txt  mongodb常用命令.txt  readme.txt  utils.py
misc/nodejs-gyp/: nodejs-gyp报错..txt
misc/redis_learning/: main.py  redis.txt  requirements.txt  utils.py
misc/rsa免密登录/: ssh生成密匙.txt
misc/v2ray环境变量配置/: WSL2内使用windows的v2ray代理配置方式.txt  ubuntu.txt  (+4 more)
pluralsight/: Getting Started with Linux System Administration.txt  Learning the Essentials of CentOS Enterprise Linux 7 Administration.txt  MySQL Fundamentals.txt  elasticsearch.txt
pluralsight/c_and_c++/CLion_demo/: CMakeLists.txt  main.cpp
rocket.chat/: docker-compose.yml  docker-compose_auth.yml  https和nginx.txt  nginx.conf  readme.txt  开发环境搭建.txt
(+645 files in other folders)
